--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         <p id="current-city"></p>
       </nav>
       <main>
+        <section>
+          DEVFALDU.jpeg
+          1.041120796
+          2.MAD-9014 Cross-Platform-Web-Development
+          3.24W_MAD9014_300 Cross-Platform Web Development
+          4. I like to play cricket
+
+
+
+
         <div class="weather-card">
           <p>Search for a city to see the current weather.</p>
         </div>
