--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       <main>
         <section>
           DEVFALDU.jpeg
-          1.041120796
-          2.MAD-9014 Cross-Platform-Web-Development
-          3.24W_MAD9014_300 Cross-Platform Web Development
-          4. I like to play cricket
+          I<p>Student Number: [041120796]</p>
+<p>Program: [Mobile Application design and development]</p>
+<p>Course: [MAD9014] - []</p>
+<p>Interesting Fact: [I like to paly cricket]</p>
+
 
 
 
