--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
       <main>
         <section>
-          DEVFALDU.jpeg
+          <img src="DEVFALDU.jpeg" alt="image">
           I<p>Student Number: [041120796]</p>
 <p>Program: [Mobile Application design and development]</p>
 <p>Course: [MAD9014] - []</p>
